# mcplease

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/: main.rs  tests.rs
src/: lib.rs  macros.rs  session.rs  traits.rs  types.rs
