[workspace]
members = [".", "cli"]
resolver = "2"

[package]
name = "mcplease"
version = "0.2.1"
edition = "2024"
description = "simple mcp framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbr/mcplease"
readme = "README.md"
keywords = ["mcp"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
fieldwork = "0.4.6"
log = "0.4.27"
notify = "8.1.0"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1.1"
